added autoupdate self plugin from GitHub release for free version