@@ -3,7 +3,6 @@ package net.ritasister.wgrp.util.utility;
 import net.ritasister.wgrp.WorldGuardRegionProtectPaperPlugin;
 import org.bukkit.Bukkit;
 
-import java.util.Arrays;
 import java.util.List;
 
 public class VersionCheck {
@@ -15,7 +14,7 @@ public class VersionCheck {
     }
 
     public final static String SUPPORTED_VERSION_RANGE = "1.20 - 1.21.4";
-    public final static List<String> SUPPORTED_VERSION = Arrays.asList(
+    public final static List<String> SUPPORTED_VERSION = List.of(
             "1.20", "1.20.1", "1.20.2", "1.20.3", "1.20.4", "1.20.5", "1.20.6",
             "1.21", "1.21.1", "1.21.2", "1.21.3", "1.21.4"
     );
@@ -29,27 +28,37 @@ public class VersionCheck {
      */
     public boolean isVersionSupported() {
         final String minecraftVersion = Bukkit.getBukkitVersion().split("-")[0];
+        final long start = System.currentTimeMillis();
         try {
-            final long time = System.currentTimeMillis();
             if (SUPPORTED_VERSION.contains(minecraftVersion)) {
-                wgrpPlugin.getLogger().info("Loaded NMS hook in " + (System.currentTimeMillis() - time) + "ms");
-                wgrpPlugin.getLogger().info(String.format("Current support versions range %s", SUPPORTED_VERSION_RANGE));
+                logVersionSupport(start);
                 return true;
             } else {
-                wgrpPlugin.getLogger().info(
-                        "No compatibility issue was found, but this plugin version does not claim to support your server package (" + minecraftVersion + ").");
+                logUnsupportedVersion(minecraftVersion);
             }
-        } catch (Exception ignored) {
-            if (SUPPORTED_VERSION.contains(minecraftVersion)) {
-                wgrpPlugin.getLogger().severe(
-                        "Your server version is marked as compatible, but a compatibility issue was found. Please report the error below (include your server version & fork too)");
-            } else {
-                wgrpPlugin.getLogger().severe(
-                        "Your server version is completely unsupported. This plugin version only " +
-                                "supports " + SUPPORTED_VERSION_RANGE + ". Disabling.");
-            }
+        } catch (Exception e) {
+            handleCompatibilityError(minecraftVersion);
         }
         return false;
     }
 
+    private void logVersionSupport(long start) {
+        wgrpPlugin.getLogger().info("Loaded NMS hook in " + (System.currentTimeMillis() - start) + "ms");
+        wgrpPlugin.getLogger().info("Current supported versions range: " + SUPPORTED_VERSION_RANGE);
+    }
+
+    private void logUnsupportedVersion(String minecraftVersion) {
+        wgrpPlugin.getLogger().info(
+                "No compatibility issue was found, but this plugin version does not claim to support your server package (" + minecraftVersion + ").");
+    }
+
+    private void handleCompatibilityError(String minecraftVersion) {
+        if (SUPPORTED_VERSION.contains(minecraftVersion)) {
+            wgrpPlugin.getLogger().severe(
+                    "Your server version is marked as compatible, but a compatibility issue was found. Please report the error (include your server version & fork).");
+        } else {
+            wgrpPlugin.getLogger().severe(
+                    "Your server version is completely unsupported. This plugin version only supports " + SUPPORTED_VERSION_RANGE + ". Disabling.");
+        }
+    }
 }
